export type RootStackParamList = {
  HabitCreateScreen: undefined;
  HabitViewScreen: { id: string };
  HabitsScreen: undefined;
  HabitUpdateScreen: { id: string };
};
